import {getTester, parsers} from './utils/test.js';

const {test} = getTester(import.meta);

const withImport = code => `import {test, it, describe, suite, before} from 'node:test';\n${code}`;

test.snapshot({
	valid: [
		// Not a test file
		'test("Foo", () => {});',

		// Already lowercase
		withImport('test("foo bar", () => {});'),
		withImport('describe("foo", () => {});'),

		// Title starts with a non-letter
		withImport('test("123 abc", () => {});'),
		withImport('test("[GET] /users", () => {});'),

		// Dynamic titles with no resolvable leading text
		withImport('test(title, () => {});'),
		// eslint-disable-next-line no-template-curly-in-string
		withImport('test(`${prefix} bar`, () => {});'),

		// Hooks have no title
		withImport('before(() => {});'),

		// Allowed prefix
		{code: withImport('test("GET /users", () => {});'), options: [{allowedPrefixes: ['GET', 'POST']}]},

		// Ignored function
		{code: withImport('describe("Foo", () => {});'), options: [{ignore: ['describe']}]},

		// `node:test` names a test after `options.name`, so the positional string is not the title
		withImport('test("UPPERCASE", {name: "lowercase"}, () => {});'),
		withImport('describe("UPPERCASE", {name: "lowercase"}, () => {});'),
		// Same, in the function-first form, where the trailing object is the options slot
		withImport('test(function inner() {}, {name: "lowercase"});'),
		// A spread after `name` could override it, so the title is not statically known
		withImport('test("lowercase", {name: "UPPERCASE", ...rest}, () => {});'),
		// A trailing object after the callback is not options, so it does not name the test
		withImport('test("lowercase", () => {}, {name: "UPPERCASE"});'),
	],
	invalid: [
		// The object form title is the descriptor's `name`
		'import test from \'node:test\';\ntest({name: \'Bad Title\', fn() {}});',

		// Uppercase first letter — test/it/describe/suite
		withImport('test("Foo", () => {});'),
		withImport('it("Should work", () => {});'),
		withImport('describe("Foo", () => {});'),
		withImport('suite("Foo", () => {});'),

		// Modifier chain
		withImport('describe.only("Foo", () => {});'),

		// Template literal with leading uppercase text
		// eslint-disable-next-line no-template-curly-in-string
		withImport('test(`Foo ${x}`, () => {});'),

		// Title with an options object still has a title
		withImport('test("Foo", {skip: true}, () => {});'),

		// Unicode uppercase letter
		withImport('test("Éfoo", () => {});'),

		// `allowedPrefixes` set but title does not match a prefix
		{code: withImport('test("Delete user", () => {});'), options: [{allowedPrefixes: ['GET']}]},

		// `ignore` set for describe but a test is still checked
		{code: withImport('test("Foo", () => {});'), options: [{ignore: ['describe']}]},

		// Namespace import
		'import * as nodeTest from \'node:test\';\nnodeTest.test("Foo", () => {});',

		// TypeScript
		{
			code: withImport('test("Foo" as string, () => {});'),
			languageOptions: {parser: parsers.typescript},
		},

		// A leading descriptor names the test even when arguments follow, which `node:test` ignores
		'import test from \'node:test\';\ntest({name: \'Bad Title\'}, () => {});',
		'import test from \'node:test\';\ntest({name: \'Bad Title\'}, {skip: true}, () => {});',

		// `options.name` is the title, so the fix rewrites it and leaves the positional string alone
		withImport('test("lowercase", {name: "UPPERCASE"}, () => {});'),
		withImport('test(function inner() {}, {name: "UPPERCASE"});'),
		// A spread before `name` cannot override it, so the title is still known
		withImport('test("lowercase", {...rest, name: "UPPERCASE"}, () => {});'),
	],
});
